Add styling to html and css files

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div class="animal-display">
-            
+            <img src="IMG_2397.png" alt="test">
         </div>
         <div class="button-container">
-            <button class="feed">Feed</button>
-            <button class="play">Play</button>
-            <button class="rest">Rest</button>
+            <button class="feed">FEED</button>
+            <button class="play">PLAY</button>
+            <button class="rest">REST</button>
         </div>
     </div>
 
