Add more styling to files

--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
 
 <body>
     <div class="container">
+        <div class="header">
+            <img class="meter" src="meter.png" alt="happiness meter">
+        </div>
         <div class="animal-display">
-            <img src="IMG_2397.png" alt="test">
+            <img class="fish" src="Fish.png" alt="default fish">
         </div>
         <div class="button-container">
+            <button class="rest">REST</button>
             <button class="feed">FEED</button>
             <button class="play">PLAY</button>
-            <button class="rest">REST</button>
         </div>
+        <div class="sand-container">
+            <img class="seaplants" src="kelp.webp" alt="kelp">
+            <img class="seaplants" src="coral.png" alt="coral">
+            <img class="seaplants" src="kelp.webp" alt="kelp">
+            <img class="seaplants" src="coral.png" alt="coral">
+            <img class="seaplants" src="kelp.webp" alt="kelp">
+        </div>    
     </div>
-
 </body>
 </html>
